tests/type-error/classes/NonInstanceMethods.vix
class Test a where
  f : a
  g : a

instance Test Int where
  f = 1
  g = 2
  h = 3
